[project]
name = "mvtcli"
version = "0.1.1"
description = "Command line for encoding and decoding Mapbox Vector Tiles"
readme = "README.md"
requires-python = ">=3.08"
dependencies = [
    "click>=8.1.8",
    "mapbox-vector-tile>=2.0.1",
    "mercantile>=1.2.1",
    "shapely>=2.0.7",
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.11.4",
    "types-shapely>=2.0.0.20241221",
    "usort>=1.0.8.post1",
]

[[tool.mypy.overrides]]
module = ["mercantile.*", "mapbox_vector_tile.*"]
follow_untyped_imports = true

[project.scripts]
mvtcli = "main:cli"

[project.urls]
"Homepage" = "https://github.com/ptpt/mvtcli"
"Bug Reports" = "https://github.com/ptpt/mvtcli/issues"
"Source" = "https://github.com/ptpt/mvtcli"